--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@editorjs/editorjs": "^2.26.5",
 		"pocketbase": "^0.12.0",
 		"svelte-markdown": "^0.2.3"
 	}
