--- a/package.json
+++ b/package.json
@@ -56,6 +56,8 @@
 		"@editorjs/table": "^2.2.1",
 		"editorjs-header-with-alignment": "^1.0.1",
 		"editorjs-paragraph-with-alignment": "^3.0.0",
+		"editorjs-style": "^3.0.3",
+		"editorjs-text-color-plugin": "^2.0.2",
 		"fetch-meta-tags": "^1.0.12",
 		"pocketbase": "^0.12.0",
 		"svelte-markdown": "^0.2.3"
