--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"@editorjs/link": "^2.5.0",
 		"@editorjs/quote": "^2.5.0",
 		"@editorjs/raw": "^2.4.0",
+		"@iconify/svelte": "^3.1.0",
 		"@skeletonlabs/skeleton": "^0.132.5",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
@@ -30,6 +31,7 @@
 		"autoprefixer": "^10.4.13",
 		"editorjs-drag-drop": "^1.1.13",
 		"editorjs-hyperlink": "^1.0.6",
+		"editorjs-inline-font-size-tool": "^1.0.1",
 		"editorjs-undo": "^2.0.19",
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
@@ -55,6 +57,7 @@
 		"@editorjs/nested-list": "^1.3.0",
 		"@editorjs/table": "^2.2.1",
 		"editorjs-header-with-alignment": "^1.0.1",
+		"editorjs-html": "^3.4.2",
 		"editorjs-paragraph-with-alignment": "^3.0.0",
 		"editorjs-style": "^3.0.3",
 		"editorjs-text-color-plugin": "^2.0.2",
