--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
 		"@editorjs/quote": "^2.5.0",
 		"@editorjs/raw": "^2.4.0",
 		"@iconify/svelte": "^3.1.0",
-		"@skeletonlabs/skeleton": "^0.132.5",
+		"@skeletonlabs/skeleton": "^1.1.0",
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/kit": "^1.5.0",
 		"@tailwindcss/forms": "^0.5.3",
@@ -56,6 +56,7 @@
 		"@editorjs/list": "^1.8.0",
 		"@editorjs/nested-list": "^1.3.0",
 		"@editorjs/table": "^2.2.1",
+		"@floating-ui/dom": "^1.2.5",
 		"editorjs-header-with-alignment": "^1.0.1",
 		"editorjs-html": "^3.4.2",
 		"editorjs-paragraph-with-alignment": "^3.0.0",
