Better landing page

--- a/package.json
+++ b/package.json
@@ -56,7 +56,8 @@
 		"@editorjs/list": "^1.8.0",
 		"@editorjs/nested-list": "^1.3.0",
 		"@editorjs/table": "^2.2.1",
-		"@floating-ui/dom": "^1.2.5",
+		"@floating-ui/dom": "^1.2.6",
+		"dayjs": "^1.11.7",
 		"editorjs-header-with-alignment": "^1.0.1",
 		"editorjs-html": "^3.4.2",
 		"editorjs-paragraph-with-alignment": "^3.0.0",
