--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
 		"eslint-plugin-svelte3": "^4.0.0",
 		"pocketbase-typegen": "^1.1.7",
 		"postcss": "^8.4.21",
-		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
+		"svelte-hero-icons": "^5.0.0",
 		"svelte-preprocess": "^5.0.1",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
