--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -97,4 +97,4 @@ jobs:
         if: ${{ github.event_name != 'pull_request' || github.event_name != 'schedule'}}
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
-        run: flyctl deploy --local-only
+        run: flyctl deploy --remote-only
