chore: Migrate to pnpm and update dependencies

--- a/package.json
+++ b/package.json
@@ -20,53 +20,54 @@
 		"@editorjs/link": "^2.5.0",
 		"@editorjs/quote": "^2.5.0",
 		"@editorjs/raw": "^2.4.0",
-		"@iconify/svelte": "^3.1.0",
-		"@skeletonlabs/skeleton": "^1.1.0",
-		"@sveltejs/adapter-auto": "^2.0.0",
-		"@sveltejs/adapter-node": "^1.2.4",
-		"@sveltejs/kit": "^1.5.0",
-		"@tailwindcss/forms": "^0.5.3",
-		"@tailwindcss/line-clamp": "^0.4.2",
-		"@tailwindcss/typography": "^0.5.9",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"autoprefixer": "^10.4.13",
-		"editorjs-drag-drop": "^1.1.13",
-		"editorjs-hyperlink": "^1.0.6",
-		"editorjs-inline-font-size-tool": "^1.0.1",
-		"editorjs-undo": "^2.0.19",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
-		"eslint-plugin-svelte3": "^4.0.0",
-		"pocketbase-typegen": "^1.1.7",
-		"postcss": "^8.4.21",
-		"prettier-plugin-svelte": "^2.8.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^3.0.1",
-		"svelte-hero-icons": "^5.0.0",
-		"svelte-preprocess": "^5.0.1",
-		"tailwindcss": "^3.2.7",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"vitest": "^0.25.3"
-	},
-	"type": "module",
-	"dependencies": {
 		"@editorjs/attaches": "^1.3.0",
-		"@editorjs/editorjs": "^2.26.5",
+		"@editorjs/editorjs": "^2.27.0",
 		"@editorjs/list": "^1.8.0",
 		"@editorjs/nested-list": "^1.3.0",
 		"@editorjs/table": "^2.2.1",
-		"@floating-ui/dom": "^1.2.6",
-		"dayjs": "^1.11.7",
 		"editorjs-header-with-alignment": "^1.0.1",
-		"editorjs-html": "^3.4.2",
+		"editorjs-html": "^3.4.3",
 		"editorjs-paragraph-with-alignment": "^3.0.0",
 		"editorjs-style": "^3.0.3",
 		"editorjs-text-color-plugin": "^2.0.2",
+		"@iconify/svelte": "^3.1.4",
+		"@skeletonlabs/skeleton": "^1.7.1",
+		"@sveltejs/adapter-auto": "^2.1.0",
+		"@sveltejs/adapter-node": "^1.2.4",
+		"@sveltejs/kit": "^1.20.2",
+		"@tailwindcss/forms": "^0.5.3",
+		"@tailwindcss/line-clamp": "^0.4.4",
+		"@tailwindcss/typography": "^0.5.9",
+		"@typescript-eslint/eslint-plugin": "^5.59.9",
+		"@typescript-eslint/parser": "^5.59.9",
+		"autoprefixer": "^10.4.14",
+		"editorjs-drag-drop": "^1.1.13",
+		"editorjs-hyperlink": "^1.0.6",
+		"editorjs-inline-font-size-tool": "^1.0.1",
+		"editorjs-undo": "^2.0.22",
+		"eslint": "^8.42.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"pocketbase-typegen": "^1.1.9",
+		"postcss": "^8.4.24",
+		"prettier-plugin-svelte": "^2.10.1",
+		"svelte": "^3.59.1",
+		"svelte-check": "^3.4.3",
+		"svelte-hero-icons": "^5.0.0",
+		"svelte-preprocess": "^5.0.4",
+		"tailwindcss": "^3.3.2",
+		"tslib": "^2.5.3",
+		"typescript": "^4.9.5",
+		"vite": "^4.3.9",
+		"vitest": "^0.25.8"
+	},
+	"type": "module",
+	"dependencies": {
+		"@floating-ui/dom": "^1.2.9",
+		"chess.js": "1.0.0-beta.6",
+		"dayjs": "^1.11.8",
 		"fetch-meta-tags": "^1.0.12",
-		"pocketbase": "^0.12.0",
+		"pocketbase": "^0.12.1",
 		"svelte-markdown": "^0.2.3"
 	}
 }
