--- a/.github/workflows/node-test-lint.yml
+++ b/.github/workflows/node-test-lint.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [14.x, 16.x, 18.x]
+        node-version: [16.x, 18.x, 20.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -26,6 +26,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm install -g pnpm
-      - run: pnpm install
+      - run: pnpm fetch
       - run: pnpm run lint
       - run: pnpm run test:unit
