--- a/package.json
+++ b/package.json
@@ -16,20 +16,15 @@
 		"typegen:watch": "simple-file-watch --delay=1000 --extension='db' --path ./pb_data --command='pocketbase-typegen --db ./pb_data/data.db --out ./src/lib/pb_types.ts'"
 	},
 	"devDependencies": {
-		"@editorjs/image": "^2.8.1",
-		"@editorjs/link": "^2.5.0",
-		"@editorjs/quote": "^2.5.0",
-		"@editorjs/raw": "^2.4.0",
 		"@editorjs/attaches": "^1.3.0",
 		"@editorjs/editorjs": "^2.27.0",
+		"@editorjs/image": "^2.8.1",
+		"@editorjs/link": "^2.5.0",
 		"@editorjs/list": "^1.8.0",
 		"@editorjs/nested-list": "^1.3.0",
+		"@editorjs/quote": "^2.5.0",
+		"@editorjs/raw": "^2.4.0",
 		"@editorjs/table": "^2.2.1",
-		"editorjs-header-with-alignment": "^1.0.1",
-		"editorjs-html": "^3.4.3",
-		"editorjs-paragraph-with-alignment": "^3.0.0",
-		"editorjs-style": "^3.0.3",
-		"editorjs-text-color-plugin": "^2.0.2",
 		"@iconify/svelte": "^3.1.4",
 		"@skeletonlabs/skeleton": "^1.7.1",
 		"@sveltejs/adapter-auto": "^2.1.0",
@@ -42,14 +37,20 @@
 		"@typescript-eslint/parser": "^5.59.9",
 		"autoprefixer": "^10.4.14",
 		"editorjs-drag-drop": "^1.1.13",
+		"editorjs-header-with-alignment": "^1.0.1",
+		"editorjs-html": "^3.4.3",
 		"editorjs-hyperlink": "^1.0.6",
 		"editorjs-inline-font-size-tool": "^1.0.1",
+		"editorjs-paragraph-with-alignment": "^3.0.0",
+		"editorjs-style": "^3.0.3",
+		"editorjs-text-color-plugin": "^2.0.2",
 		"editorjs-undo": "^2.0.22",
 		"eslint": "^8.42.0",
 		"eslint-config-prettier": "^8.8.0",
 		"eslint-plugin-svelte3": "^4.0.0",
 		"pocketbase-typegen": "^1.1.9",
 		"postcss": "^8.4.24",
+		"prettier": "^2.8.8",
 		"prettier-plugin-svelte": "^2.10.1",
 		"svelte": "^3.59.1",
 		"svelte-check": "^3.4.3",
