--- a/.github/workflows/node-test-lint.yml
+++ b/.github/workflows/node-test-lint.yml
@@ -26,6 +26,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm install -g pnpm
+      - run: pnpm add prettier
       - run: pnpm fetch
       - run: pnpm run lint
       - run: pnpm run test:unit
