--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -51,5 +51,5 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+          cache-from: type=gha,scope=${{ hashFiles('**/pnpm-lock.yaml') }}
+          cache-to: type=gha,mode=max,scope=${{ hashFiles('**/pnpm-lock.yaml') }}
