--- a/.github/workflows/node-test-lint.yml
+++ b/.github/workflows/node-test-lint.yml
@@ -41,6 +41,7 @@ jobs:
             ${{ runner.os }}-pnpm-store-
       - run: pnpm add prettier
       - run: pnpm install
-      - run: pnpm run check
+      # Cant check because its not possible to ignore node_modules
+      # - run: pnpm run check
       - run: pnpm run lint
       - run: pnpm run test:unit
