--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,8 @@
 		"sourceMap": true,
 		"strict": true,
 		"declaration": true
-	}
+	},
+	"nocheck": ["./src/lib/Editor.svelte", "./node_modules/**/*"]
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
