--- a/.github/workflows/node-test-lint.yml
+++ b/.github/workflows/node-test-lint.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
@@ -39,8 +39,8 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm add prettier
-      - run: pnpm install
+      # - run: pnpm add prettier --
+      - run: pnpm install --frozen-lockfile --offline
       # Cant check because its not possible to ignore node_modules
       # - run: pnpm run check
       - run: pnpm run lint
