--- a/.github/workflows/node-test-lint.yml
+++ b/.github/workflows/node-test-lint.yml
@@ -40,7 +40,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
       # - run: pnpm add prettier --
-      - run: pnpm install --frozen-lockfile --offline
+      - run: pnpm install --frozen-lockfile --prefer-offline
       # Cant check because its not possible to ignore node_modules
       # - run: pnpm run check
       - run: pnpm run lint
