ci: Add pnpm cache (#27)
* fix: Remove unneded files

* ci: Added pnpm caching

* fix: Use $lib

* ci: Ignore svelte-check, can't ignore node_modules

* ci: fix error

* ci: fix typo

* fix: Prettier formatting

--- a/.github/workflows/node-test-lint.yml
+++ b/.github/workflows/node-test-lint.yml
@@ -15,18 +15,33 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
       - uses: actions/checkout@v3
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
       - name: Use Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v3
         with:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
-      - run: npm install -g pnpm
-      - run: pnpm add prettier
-      - run: pnpm fetch
+      - name: Get pnpm store directory
+        id: pnpm-cache
+        run: |
+          echo "pnpm_cache_dir=$(pnpm store path)" >> $GITHUB_OUTPUT
+      - name: Setup pnpm cache
+        uses: actions/cache@v3
+        with:
+          path: ${{ steps.pnpm-cache.outputs.pnpm_cache_dir }}
+          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
+          restore-keys: |
+            ${{ runner.os }}-pnpm-store-
+      # - run: pnpm add prettier --
+      - run: pnpm install --frozen-lockfile --prefer-offline
+      # Cant check because its not possible to ignore node_modules
+      # - run: pnpm run check
       - run: pnpm run lint
       - run: pnpm run test:unit
