--- a/.eslintignore
+++ b/.eslintignore
@@ -4,11 +4,13 @@ node_modules
 /.svelte-kit
 /package
 .env
-.env.*
+.env.\*
 !.env.example
+pb_types.ts
+wavify.js
 
 # Ignore files for PNPM, NPM and YARN
+
 pnpm-lock.yaml
 package-lock.json
 yarn.lock
-pb_types.ts
