--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"chess.js": "1.0.0-beta.6",
 		"dayjs": "^1.11.8",
 		"fetch-meta-tags": "^1.0.12",
+		"gsap": "^3.12.1",
 		"pocketbase": "^0.12.1",
 		"svelte-markdown": "^0.2.3"
 	}
