--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
 		"fetch-meta-tags": "^1.0.12",
 		"gsap": "^3.12.1",
 		"pocketbase": "^0.12.1",
+		"svelte-inview": "^4.0.0",
 		"svelte-markdown": "^0.2.3"
 	}
 }
