--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
 		"tailwindcss": "^3.3.2",
 		"tslib": "^2.5.3",
 		"typescript": "^4.9.5",
+		"typescript-svelte-plugin": "^0.3.29",
 		"vite": "^4.3.9",
 		"vitest": "^0.25.8"
 	},
